[project]
name = "pcms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "configparser>=7.2.0",
    "importlib>=1.0.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "pexpect>=4.9.0",
    "ptyprocess>=0.7.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "tzdata>=2025.3",
]
